Fixed knex queries and added getCatcherById
