# api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: localhost:8080
 # basePath prefixes all resource paths 
-basePath: /
+basePath: /api/v1/
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -18,6 +18,30 @@ consumes:
 produces:
   - application/json
 paths:
+  /catchers/{id}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: registration
+    get:
+      description: Returns Catcher to the caller
+      # used as the method name of the controller
+      operationId: getCatcher
+      parameters:
+        - in: path
+          name: id
+          description: Catcher Id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /catchers:
     x-swagger-router-controller: registration
     post:
@@ -30,7 +54,7 @@ paths:
       - application/json
       parameters:
       - in: body
-        name: Catcher
+        name: catcher
         required: true
         description: Add Catcher
         schema:
@@ -50,30 +74,6 @@ paths:
           description: an existing catcher already exists
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/ErrorResponse"
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
@@ -115,12 +115,6 @@ definitions:
         minLength: 6
         maxLength: 7
         example: SW19 01B
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   SuccessResponse:
     required:
       - message
